--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 *.exe
 *.o
 *.so
+*.out
 
 # Packages #
 ############
@@ -35,3 +36,7 @@
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+# IDE files #
+######################
+.vscode
